--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,8 @@
 
 <div class="banner">
-<h1>BE PART OF THE BEST ASTRONOMIC EXPERIENCE</h1>
-<h2>Discovery your personal cosmic guidance</h2>
-<h2>Daily horoscope and tarot reading powered by AI</h2>
+<h1>BE PART OF THE BEST ASTROLOGY EXPERIENCE</h1>
+<h2>Discover your personal cosmic guidance</h2>
+<p>Daily horoscope and tarot reading powered by AI</p>
 
     <% if user_signed_in? %>
       <%= link_to "MY FUTURE", services_path, class: "premium-action-btn primary" %>
