--- a/app/views/readings/new_horoscope.erb
+++ b/app/views/readings/new_horoscope.erb
@@ -2,7 +2,7 @@
   <div class="astro-card">
     <div class="astro-header" style ="text-align: center">
       <h1>Your Daily Horoscope</h1>
-      <p>Click the button and we’ll generate today’s horoscope based on your birth data.</p>
+      <p>Click the button and we’ll generate today’s horoscope based on your zodiac sign.</p>
     </div>
 
     <%= simple_form_for @reading, url: horoscope_readings_path do |f| %>
