--- a/app/views/readings/new_tarot.html.erb
+++ b/app/views/readings/new_tarot.html.erb
@@ -33,7 +33,7 @@
         </div>
 
         <%# BOTÓN DE SUBMIT (TARGET) %>
-        <div class="premium-actions" style="text-align: center">
+        <div class="premium-actions" style="text-align: center" data-loading-target="button">
           <%= f.button :submit,
               "Generate my tarot",
               class: "premium-action-btn primary" %>
