--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,6 +8,8 @@
       <%= link_to "MY FUTURE", services_path, class: "premium-action-btn primary" %>
     <% else %>
       <%= link_to "REGISTER FOR FREE", new_user_registration_path, class: "premium-action-btn primary" %>
+     <%= link_to "LOG IN", new_user_session_path, class:"premium-action-btn primary" %>
+
     <% end %>
 
   </div>
